--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<!-- Logo -->
 				<div id="logo">
 					<h1><a href="#">bLOG activ.3 Ieu</a></h1>
-					<span>Design by juliocesar</span>
+					<span>Hecha por julioCesarRodriguezSalamanca</span>
 				</div>
 				
 				<!-- Nav -->
